--- a/src/apps/H.ReactiveUI.CommonInteractions.Apps.Wpf/App.xaml
+++ b/src/apps/H.ReactiveUI.CommonInteractions.Apps.Wpf/App.xaml
@@ -1,5 +1,5 @@
 ﻿<Application
-    x:Class="H.ReactiveUI.CommonInteractions.Apps.Wpf.App"
+    x:Class="H.ReactiveUI.Apps.Wpf.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     StartupUri="MainWindow.xaml"
