--- a/src/apps/H.ReactiveUI.CommonInteractions.Apps.Wpf/MainWindow.xaml
+++ b/src/apps/H.ReactiveUI.CommonInteractions.Apps.Wpf/MainWindow.xaml
@@ -1,5 +1,5 @@
 ﻿<Window
-    x:Class="H.ReactiveUI.CommonInteractions.Apps.Wpf.MainWindow"
+    x:Class="H.ReactiveUI.Apps.Wpf.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
