--- a/src/apps/H.ReactiveUI.CommonInteractions.Apps.Wpf/App.xaml
+++ b/src/apps/H.ReactiveUI.CommonInteractions.Apps.Wpf/App.xaml
@@ -2,6 +2,6 @@
     x:Class="H.ReactiveUI.Apps.Wpf.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    StartupUri="MainWindow.xaml"
+    StartupUri="Views/MainView.xaml"
     />
 
