--- a/src/apps/H.ReactiveUI.CommonInteractions.Apps.Wpf/Views/MessageInteractionsView.xaml
+++ b/src/apps/H.ReactiveUI.CommonInteractions.Apps.Wpf/Views/MessageInteractionsView.xaml
@@ -1,13 +1,15 @@
-﻿<Window
-    x:Class="H.ReactiveUI.Apps.Wpf.MainWindow"
+﻿<UserControl
+    x:Class="H.ReactiveUI.Apps.Views.MessageInteractionsView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    Title="MainWindow"
-    Width="800"
-    Height="600"
-    DataContext="{Binding RelativeSource={RelativeSource Self}}"
     >
-</Window>
+    <StackPanel>
+        <Button Content="Message"/>
+        <Button Content="Warning"/>
+        <Button Content="Exception"/>
+        <Button Content="Question"/>
+    </StackPanel>
+</UserControl>
