--- a/src/apps/H.ReactiveUI.CommonInteractions.Apps.Wpf/Views/MessageInteractionsView.xaml
+++ b/src/apps/H.ReactiveUI.CommonInteractions.Apps.Wpf/Views/MessageInteractionsView.xaml
@@ -4,12 +4,29 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:viewModels="clr-namespace:H.ReactiveUI.Apps.ViewModels;assembly=H.ReactiveUI.Apps.Core"
     mc:Ignorable="d"
     >
+    <UserControl.DataContext>
+        <viewModels:MessageInteractionsViewModel/>
+    </UserControl.DataContext>
+    
     <StackPanel>
-        <Button Content="Message"/>
-        <Button Content="Warning"/>
-        <Button Content="Exception"/>
-        <Button Content="Question"/>
+        <Button
+            Content="Message"
+            Command="{Binding Message}"
+            />
+        <Button
+            Content="Warning"
+            Command="{Binding Warning}"
+            />
+        <Button
+            Content="Exception"
+            Command="{Binding Exception}"
+            />
+        <Button
+            Content="Question"
+            Command="{Binding Question}"
+            />
     </StackPanel>
 </UserControl>
