--- a/src/apps/H.ReactiveUI.CommonInteractions.Apps.Wpf/Views/MessageInteractionsView.xaml
+++ b/src/apps/H.ReactiveUI.CommonInteractions.Apps.Wpf/Views/MessageInteractionsView.xaml
@@ -12,21 +12,9 @@
     </UserControl.DataContext>
     
     <StackPanel>
-        <Button
-            Content="Message"
-            Command="{Binding Message}"
-            />
-        <Button
-            Content="Warning"
-            Command="{Binding Warning}"
-            />
-        <Button
-            Content="Exception"
-            Command="{Binding Exception}"
-            />
-        <Button
-            Content="Question"
-            Command="{Binding Question}"
-            />
+        <Button Content="Message" Command="{Binding Message}"/>
+        <Button Content="Warning" Command="{Binding Warning}"/>
+        <Button Content="Exception" Command="{Binding Exception}"/>
+        <Button Content="Question" Command="{Binding Question}"/>
     </StackPanel>
 </UserControl>
