example: Added PreviewDropView.

--- a/src/apps/H.ReactiveUI.CommonInteractions.Apps.Wpf/Views/FileInteractionsView.xaml
+++ b/src/apps/H.ReactiveUI.CommonInteractions.Apps.Wpf/Views/FileInteractionsView.xaml
@@ -5,9 +5,9 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:viewModels="clr-namespace:H.ReactiveUI.Apps.ViewModels;assembly=H.ReactiveUI.Apps.Core"
+    xmlns:views="clr-namespace:H.ReactiveUI.Apps.Views"
     xmlns:h="clr-namespace:H.ReactiveUI;assembly=H.ReactiveUI.CommonInteractions.Wpf"
     mc:Ignorable="d"
-    d:DataContext="{d:DesignInstance Type=viewModels:FileInteractionsViewModel, IsDesignTimeCreatable=True}"
     AllowDrop="True"
     h:DragAndDropExtensions.DragFilesEnterCommand="{Binding DragFilesEnter}"
     h:DragAndDropExtensions.DragTextEnterCommand="{Binding DragTextEnter}"
@@ -19,28 +19,34 @@
         <viewModels:FileInteractionsViewModel/>
     </UserControl.DataContext>
 
-    <StackPanel Orientation="Horizontal">
-        <StackPanel>
-            <Button Content="OpenFile" Command="{Binding OpenFile}"/>
-            <Button Content="OpenFiles" Command="{Binding OpenFiles}"/>
-            <Button Content="SaveFile" Command="{Binding SaveFile}"/>
-            <Button Content="SaveOpenFile" Command="{Binding SaveOpenFile}"/>
-            <Button Content="LaunchPath" Command="{Binding LaunchPath}"/>
-            <Button Content="LaunchInTemp" Command="{Binding LaunchInTemp}"/>
-            <Button Content="LaunchFolder" Command="{Binding LaunchFolder}"/>
-        </StackPanel>
-        <StackPanel>
-            <StackPanel Orientation="Horizontal">
-                <TextBlock Text="Current File:"/>
-                <TextBlock Text="{Binding Name}"/>
+    <Grid>
+        <StackPanel Orientation="Horizontal">
+            <StackPanel>
+                <Button Content="OpenFile" Command="{Binding OpenFile}"/>
+                <Button Content="OpenFiles" Command="{Binding OpenFiles}"/>
+                <Button Content="SaveFile" Command="{Binding SaveFile}"/>
+                <Button Content="SaveOpenFile" Command="{Binding SaveOpenFile}"/>
+                <Button Content="LaunchPath" Command="{Binding LaunchPath}"/>
+                <Button Content="LaunchInTemp" Command="{Binding LaunchInTemp}"/>
+                <Button Content="LaunchFolder" Command="{Binding LaunchFolder}"/>
             </StackPanel>
-            <TextBox
-                TextWrapping="Wrap"
-                AcceptsReturn="True"
-                Width="400"
-                Height="400"
-                Text="{Binding Content, Mode=TwoWay}"
-                />
+            <StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Current File:"/>
+                    <TextBlock Text="{Binding Name}" d:Text="None"/>
+                </StackPanel>
+                <TextBox
+                    TextWrapping="Wrap"
+                    AcceptsReturn="True"
+                    Width="400"
+                    Height="400"
+                    Text="{Binding Content, Mode=TwoWay}"
+                    />
+            </StackPanel>
         </StackPanel>
-    </StackPanel>
+
+        <views:PreviewDropView
+            DataContext="{Binding PreviewDropViewModel}"
+            />
+    </Grid>
 </UserControl>
