--- a/src/apps/H.ReactiveUI.CommonInteractions.Apps.Wpf/App.xaml
+++ b/src/apps/H.ReactiveUI.CommonInteractions.Apps.Wpf/App.xaml
@@ -3,5 +3,10 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     StartupUri="Views/MainView.xaml"
-    />
+    xmlns:hconverters="clr-namespace:H.ReactiveUI.Converters;assembly=H.ReactiveUI.CommonInteractions.Wpf"
+    >
+    <Application.Resources>
+        <hconverters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+    </Application.Resources>
+</Application>
 
