example: Added FileInteractionsViewModel.SelectedFile property.

--- a/src/apps/H.ReactiveUI.CommonInteractions.Apps.Wpf/Views/FileInteractionsView.xaml
+++ b/src/apps/H.ReactiveUI.CommonInteractions.Apps.Wpf/Views/FileInteractionsView.xaml
@@ -33,7 +33,7 @@
             <StackPanel>
                 <StackPanel Orientation="Horizontal">
                     <TextBlock Text="Current File:"/>
-                    <TextBlock Text="{Binding Name}" d:Text="None"/>
+                    <TextBlock Text="{Binding SelectedFile.FileName}" d:Text="None"/>
                 </StackPanel>
                 <TextBox
                     TextWrapping="Wrap"
