example: Implemented Uno views.

--- a/src/shared/H.ReactiveUI.Apps.Uno.Shared/Views/FileInteractionsView.xaml
+++ b/src/shared/H.ReactiveUI.Apps.Uno.Shared/Views/FileInteractionsView.xaml
@@ -4,9 +4,9 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:viewModels="clr-namespace:H.ReactiveUI.Apps.ViewModels;assembly=H.ReactiveUI.Apps.Core"
-    xmlns:views="clr-namespace:H.ReactiveUI.Apps.Views"
-    xmlns:h="clr-namespace:H.ReactiveUI;assembly=H.ReactiveUI.CommonInteractions.Wpf"
+    xmlns:viewModels="using:H.ReactiveUI.Apps.ViewModels"
+    xmlns:views="using:H.ReactiveUI.Apps.Views"
+    xmlns:h="using:H.ReactiveUI"
     mc:Ignorable="d"
     AllowDrop="True"
     h:DragAndDropExtensions.DragFilesEnterCommand="{Binding DragFilesEnter}"
