--- a/src/shared/H.ReactiveUI.Apps.Uno.Shared/App.xaml
+++ b/src/shared/H.ReactiveUI.Apps.Uno.Shared/App.xaml
@@ -2,10 +2,16 @@
     x:Class="H.ReactiveUI.Apps.App"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:hconverters="using:H.ReactiveUI.Converters"
     >
     <Application.Resources>
         <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls"/>
+            </ResourceDictionary.MergedDictionaries>
+            
             <!-- Create converters -->
+            <hconverters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
