--- a/src/shared/H.ReactiveUI.Apps.Uno.Shared/Views/MainView.xaml
+++ b/src/shared/H.ReactiveUI.Apps.Uno.Shared/Views/MainView.xaml
@@ -7,6 +7,7 @@
     mc:Ignorable="d"
     xmlns:views="using:H.ReactiveUI.Apps.Views"
     xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
     >
     <muxc:TabView IsAddTabButtonVisible="False">
         <muxc:TabViewItem Header="File" IsClosable="False">
