refactor(apps.Avalonia): Refactored.

--- a/src/apps/H.ReactiveUI.Apps.Avalonia/App.axaml
+++ b/src/apps/H.ReactiveUI.Apps.Avalonia/App.axaml
@@ -2,7 +2,7 @@
     x:Class="H.ReactiveUI.Apps.App"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:avalonia.mvvm"
+    xmlns:local="using:H.ReactiveUI.Apps"
     >
     <Application.DataTemplates>
         <local:ViewLocator/>
