--- a/src/apps/H.ReactiveUI.Apps.Uno.Shared/Views/FileInteractionsView.xaml
+++ b/src/apps/H.ReactiveUI.Apps.Uno.Shared/Views/FileInteractionsView.xaml
@@ -1,70 +1,68 @@
-﻿<UserControl
-    x:Class="H.ReactiveUI.Apps.Views.FileInteractionsView"
+﻿<views:FileInteractionsViewBase
+    x:Class="HReactiveUI.Apps.Views.FileInteractionsView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:viewModels="using:H.ReactiveUI.Apps.ViewModels"
-    xmlns:views="using:H.ReactiveUI.Apps.Views"
+    xmlns:views="using:HReactiveUI.Apps.Views"
     xmlns:h="using:H.ReactiveUI"
     mc:Ignorable="d"
     AllowDrop="True"
-    h:DragAndDropExtensions.DragFilesEnterCommand="{Binding DragFilesEnter}"
-    h:DragAndDropExtensions.DragTextEnterCommand="{Binding DragTextEnter}"
-    h:DragAndDropExtensions.DragLeaveCommand="{Binding DragLeave}"
-    h:DragAndDropExtensions.DropFilesCommand="{Binding DropFiles}"
-    h:DragAndDropExtensions.DropTextCommand="{Binding DropText}"
+    h:DragAndDropExtensions.DragFilesEnterCommand="{x:Bind ViewModel.DragFilesEnter, Mode=OneTime}"
+    h:DragAndDropExtensions.DragTextEnterCommand="{x:Bind ViewModel.DragTextEnter, Mode=OneTime}"
+    h:DragAndDropExtensions.DragLeaveCommand="{x:Bind ViewModel.DragLeave, Mode=OneTime}"
+    h:DragAndDropExtensions.DropFilesCommand="{x:Bind ViewModel.DropFiles, Mode=OneTime}"
+    h:DragAndDropExtensions.DropTextCommand="{x:Bind ViewModel.DropText, Mode=OneTime}"
+    d:RequestedTheme="Dark"
     >
-    <UserControl.DataContext>
-        <viewModels:FileInteractionsViewModel />
-    </UserControl.DataContext>
-
     <Grid>
         <StackPanel Orientation="Horizontal">
             <StackPanel>
                 <Button
                     Content="OpenFolder"
-                    Command="{Binding OpenFolder}"
+                    Command="{x:Bind ViewModel.OpenFolder, Mode=OneTime}"
                     />
                 <Button
                     Content="OpenFile"
-                    Command="{Binding OpenFile}"
+                    Command="{x:Bind ViewModel.OpenFile, Mode=OneTime}"
                     />
                 <Button
                     Content="OpenFiles"
-                    Command="{Binding OpenFiles}"
+                    Command="{x:Bind ViewModel.OpenFiles, Mode=OneTime}"
                     />
                 <Button
                     Content="SaveFile"
-                    Command="{Binding SaveFile}"
+                    Command="{x:Bind ViewModel.SaveFile, Mode=OneTime}"
                     />
                 <Button
                     Content="SaveFileAs"
-                    Command="{Binding SaveFileAs}"
+                    Command="{x:Bind ViewModel.SaveFileAs, Mode=OneTime}"
                     />
                 <Button
                     Content="CreateTemporaryFileAndLaunch"
-                    Command="{Binding CreateTemporaryFileAndLaunch}"
+                    Command="{x:Bind ViewModel.CreateTemporaryFileAndLaunch, Mode=OneTime}"
                     />
             </StackPanel>
             <StackPanel>
                 <StackPanel Orientation="Horizontal">
                     <TextBlock Text="Current File:" />
                     <TextBlock
-                        Text="{Binding SelectedFile.FileName}"
+                        Text="{x:Bind ViewModel.SelectedFile.FileName, Mode=OneWay}"
                         d:Text="None"
                         />
                 </StackPanel>
+                <!--  https://github.com/unoplatform/uno/issues/9212  -->
                 <TextBox
                     TextWrapping="Wrap"
                     AcceptsReturn="True"
                     Width="400"
                     Height="400"
-                    Text="{Binding Content, Mode=TwoWay}"
+                    Text="{x:Bind ViewModel.Content, Mode=OneWay}"
                     />
             </StackPanel>
         </StackPanel>
 
-        <views:PreviewDropView DataContext="{Binding PreviewDropViewModel}" />
+        <views:PreviewDropView ViewModel="{x:Bind ViewModel.PreviewDropViewModel, Mode=OneTime}" />
     </Grid>
-</UserControl>
+</views:FileInteractionsViewBase>
