--- a/src/apps/H.ReactiveUI.Apps.Uno.Shared/Views/MessageInteractionsView.xaml
+++ b/src/apps/H.ReactiveUI.Apps.Uno.Shared/Views/MessageInteractionsView.xaml
@@ -1,20 +1,30 @@
-﻿<UserControl
-    x:Class="H.ReactiveUI.Apps.Views.MessageInteractionsView"
+﻿<views:MessageInteractionsViewBase
+    x:Class="HReactiveUI.Apps.Views.MessageInteractionsView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:viewModels="using:H.ReactiveUI.Apps.ViewModels"
+    xmlns:views="using:HReactiveUI.Apps.Views"
     mc:Ignorable="d"
+    d:RequestedTheme="Dark"
     >
-    <UserControl.DataContext>
-        <viewModels:MessageInteractionsViewModel/>
-    </UserControl.DataContext>
-    
     <StackPanel>
-        <Button Content="Message" Command="{Binding Message}"/>
-        <Button Content="Warning" Command="{Binding Warning}"/>
-        <Button Content="Exception" Command="{Binding Exception}"/>
-        <Button Content="Question" Command="{Binding Question}"/>
+        <Button
+            Content="Message"
+            Command="{x:Bind ViewModel.Message, Mode=OneTime}"
+            />
+        <Button
+            Content="Warning"
+            Command="{x:Bind ViewModel.Warning, Mode=OneTime}"
+            />
+        <Button
+            Content="Exception"
+            Command="{x:Bind ViewModel.Exception, Mode=OneTime}"
+            />
+        <Button
+            Content="Question"
+            Command="{x:Bind ViewModel.Question, Mode=OneTime}"
+            />
     </StackPanel>
-</UserControl>
+</views:MessageInteractionsViewBase>
