--- a/src/apps/H.ReactiveUI.Apps.Wpf/App.xaml
+++ b/src/apps/H.ReactiveUI.Apps.Wpf/App.xaml
@@ -2,11 +2,11 @@
     x:Class="H.ReactiveUI.Apps.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    StartupUri="Views/MainView.xaml"
+    Startup="OnStartup"
     xmlns:hconverters="clr-namespace:H.ReactiveUI.Converters;assembly=H.ReactiveUI.CommonInteractions.Wpf"
     >
     <Application.Resources>
-        <hconverters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+        <hconverters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
     </Application.Resources>
 </Application>
 
