--- a/src/apps/H.ReactiveUI.Apps.Wpf/Views/MainView.xaml
+++ b/src/apps/H.ReactiveUI.Apps.Wpf/Views/MainView.xaml
@@ -1,24 +1,28 @@
-﻿<Window
-    x:Class="H.ReactiveUI.Apps.Views.MainView"
+﻿<rx:ReactiveWindow
+    x:TypeArguments="viewModels:MainViewModel"
+    x:Class="HReactiveUI.Apps.Views.MainView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:views="clr-namespace:H.ReactiveUI.Apps.Views"
-    mc:Ignorable="d"
+    xmlns:rx="http://reactiveui.net"
+    xmlns:views="clr-namespace:HReactiveUI.Apps.Views"
+    xmlns:viewModels="clr-namespace:H.ReactiveUI.Apps.ViewModels;assembly=H.ReactiveUI.Apps.Core"
     Title="MainWindow"
     Width="800"
     Height="600"
+    mc:Ignorable="d"
+    x:Name="Root"
     >
     <TabControl>
         <TabItem Header="File">
-            <views:FileInteractionsView/>
+            <views:FileInteractionsView ViewModel="{Binding ViewModel.FileInteractions, ElementName=Root, Mode=OneWay}" />
         </TabItem>
         <TabItem Header="Message">
-            <views:MessageInteractionsView/>
+            <views:MessageInteractionsView ViewModel="{Binding ViewModel.MessageInteractions, ElementName=Root, Mode=OneWay}" />
         </TabItem>
         <TabItem Header="Web">
-            <views:WebInteractionsView/>
+            <views:WebInteractionsView ViewModel="{Binding ViewModel.WebInteractions, ElementName=Root, Mode=OneWay}" />
         </TabItem>
     </TabControl>
-</Window>
+</rx:ReactiveWindow>
