--- a/src/apps/H.ReactiveUI.Apps.Wpf/Views/MessageInteractionsView.xaml
+++ b/src/apps/H.ReactiveUI.Apps.Wpf/Views/MessageInteractionsView.xaml
@@ -1,20 +1,31 @@
-﻿<UserControl
-    x:Class="H.ReactiveUI.Apps.Views.MessageInteractionsView"
+﻿<rx:ReactiveUserControl
+    x:TypeArguments="viewModels:MessageInteractionsViewModel"
+    x:Class="HReactiveUI.Apps.Views.MessageInteractionsView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:rx="http://reactiveui.net"
     xmlns:viewModels="clr-namespace:H.ReactiveUI.Apps.ViewModels;assembly=H.ReactiveUI.Apps.Core"
     mc:Ignorable="d"
+    x:Name="Root"
     >
-    <UserControl.DataContext>
-        <viewModels:MessageInteractionsViewModel/>
-    </UserControl.DataContext>
-    
     <StackPanel>
-        <Button Content="Message" Command="{Binding Message}"/>
-        <Button Content="Warning" Command="{Binding Warning}"/>
-        <Button Content="Exception" Command="{Binding Exception}"/>
-        <Button Content="Question" Command="{Binding Question}"/>
+        <Button
+            Content="Message"
+            Command="{Binding ViewModel.Message, ElementName=Root, Mode=OneWay}"
+            />
+        <Button
+            Content="Warning"
+            Command="{Binding ViewModel.Warning, ElementName=Root, Mode=OneWay}"
+            />
+        <Button
+            Content="Exception"
+            Command="{Binding ViewModel.Exception, ElementName=Root, Mode=OneWay}"
+            />
+        <Button
+            Content="Question"
+            Command="{Binding ViewModel.Question, ElementName=Root, Mode=OneWay}"
+            />
     </StackPanel>
-</UserControl>
+</rx:ReactiveUserControl>
