--- a/src/apps/H.ReactiveUI.Apps.Wpf/Views/PreviewDropView.xaml
+++ b/src/apps/H.ReactiveUI.Apps.Wpf/Views/PreviewDropView.xaml
@@ -1,9 +1,11 @@
-﻿<UserControl
-    x:Class="H.ReactiveUI.Apps.Views.PreviewDropView"
+﻿<rx:ReactiveUserControl
+    x:TypeArguments="viewModels:PreviewDropViewModel"
+    x:Class="HReactiveUI.Apps.Views.PreviewDropView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:rx="http://reactiveui.net"
     xmlns:viewModels="clr-namespace:H.ReactiveUI.Apps.ViewModels;assembly=H.ReactiveUI.Apps.Core"
     mc:Ignorable="d"
     d:DesignWidth="800"
@@ -11,8 +13,8 @@
     Background="Black"
     Foreground="White"
     Opacity="0.5"
-    d:DataContext="{d:DesignInstance viewModels:PreviewDropViewModel}"
-    Visibility="{Binding IsVisible, Converter={StaticResource BooleanToVisibilityConverter}}"
+    Visibility="{Binding ViewModel.IsVisible, Converter={StaticResource BooleanToVisibilityConverter}, ElementName=Root, Mode=OneWay}"
+    x:Name="Root"
     >
     <StackPanel
         VerticalAlignment="Center"
@@ -21,14 +23,14 @@
         <TextBlock
             FontSize="50"
             HorizontalAlignment="Center"
-            Text="{Binding Name}"
+            Text="{Binding ViewModel.Name, ElementName=Root, Mode=OneWay}"
             d:Text="Name"
             />
         <TextBlock
             FontSize="20"
             HorizontalAlignment="Center"
-            Text="{Binding Content}"
+            Text="{Binding ViewModel.Content, ElementName=Root, Mode=OneWay}"
             d:Text="Content"
             />
     </StackPanel>
-</UserControl>
+</rx:ReactiveUserControl>
